# spark_pystock-ai

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/: read_data.py  transform.py  transform_data.py
terraform/dataproc/: .terraform.lock.hcl  README.md  deploy.sh  deploy_without_terraform.sh  deploy_without_terraform_default.sh  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/dataproc/src/: __init__.py
tests/: conftest.py  test_read_data.py  test_transform_data.py  test_transform_script.py
