[tool.poetry]
name = "pystock-ai"
version = "0.1.0"
description = "A PySpark application for processing stock data"
authors = ["Wayne Cheng <wayneweicheng@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pyspark = ">=3.5.5,<4.0.0"
pandas = ">=2.2.3,<3.0.0"
black = "^25.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5,<9.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
